@@ -1,10 +1,10 @@
-- add playlist support
+- make playlist editable
+
+- load / save playlists
 
 - implement an additional backend so that MP3 and other formats can be played
   as well (this has to use the libraries already present on the Nokia 770 as
   Xiph.org does not allow including proprietary codecs)
-
-- integrate well with the maemo look'n feel
 
 - Lyrics lookup in the internet
 
