@@ -1,5 +1,5 @@
 AC_INIT(Makefile.am)
-AM_INIT_AUTOMAKE(OggPlay, 0.20)
+AM_INIT_AUTOMAKE(OggPlay, 0.30)
 
 AC_PROG_CPP
 AC_PROG_INSTALL
