@@ -1,5 +1,7 @@
 2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>
 
+	* src/playlistwidget.c: Print the current title in bold face.
+
 	* src/main.c: Start playing when loading the first title into the
 	playlist.
 
